Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123959

qApp crashes after being deleted when hosted as a plugin and when focus application is changed

XMLWordPrintable

    • macOS
    • 8bb93bf8e (dev), fa92448dd (6.7), 52770791a (6.6), b9d08e673 (tqtc/lts-6.5)

      I've stumbled on a very particular bug that didn’t happened before with Qt 5.X.Y

      We develop audio plugins with Qt compiled statically. Every time a instance of our plugins is loaded we increment a counter and when a plugin is unloaded, we decrement the counter. When it gets to zero, we delete the Qt app. This method has been working stable for the last 8 years.

      Recently, using Qt 6.6.1 I’ve realised that if I delete the last plugin, and the Qt app is deleted, if you then switch the focus to another application, the host application of the plugin crashes on the following function:

      0x155cddc8c invocation function for block in QCocoaWindow::setupPopupMonitor() + 24

      As far as I could evaluate, this is a macOS bug only.

      This is a tricky bug to provide an example on how to reproduce, we need to be able to load the Qt application as a plugin, delete the Qt Application and switch the app in focus. But I'm available to provide more information if necessary. 

        For Gerrit Dashboard: QTBUG-123959
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            sinosoidal Nuno Santos
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: